--- a/_pages/datasets.html
+++ b/_pages/datasets.html
@@ -5,7 +5,7 @@ permalink: /datasets/
 author_profile: false
 ---
 
-{% include datasets/exampleElodie.html %}
+{% include datafiles/exampleElodie.html %}
 
 
 
